test: use empty set instead of new hashset